Update Spring Boot 3 latest version, added JDK 20 with Virtual Threads - build kotlin-service, build user-service, build person-service, build authentication-service, build edge-server, build go-service, build react-webapp