@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.1.0</version>
+		<version>3.1.3</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.springboot</groupId>
@@ -20,17 +20,15 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>20</java.version>
 		<mapstruct.version>1.5.5.Final</mapstruct.version>
-		<spring-cloud.version>2022.0.3</spring-cloud.version>
+		<spring-cloud.version>2022.0.4</spring-cloud.version>
 		<docker.image.name>${project.artifactId}</docker.image.name>
-		<docker.image.from>openjdk:17.0.1</docker.image.from>
+		<docker.image.from>openjdk:20-jdk</docker.image.from>
 		<!-- Not working on mac m1 -->
 		<!-- <docker.image.from.fabric8>ghcr.io/graalvm/graalvm-ce:java17-21</docker.image.from.fabric8> -->
-		<docker.image.from.fabric8>openjdk:17.0.1</docker.image.from.fabric8>
+		<docker.image.from.fabric8>openjdk:20-jdk</docker.image.from.fabric8>
 		<code-coverage>0.8</code-coverage>
 		<dockerfile-maven-plugin.version>1.3.4</dockerfile-maven-plugin.version>
-		<docker.env.JAVA_OPTS>-Xmx512m -Dfile.encoding=UTF-8 -XX:+UseG1GC -verbose:gc -XX:+PrintGCDetails
-			-Xloggc:/var/log/gc.log -Djava.security.egd=file:/dev/./urandom
-		</docker.env.JAVA_OPTS>
+		<docker.env.JAVA_OPTS>--enable-preview -Xmx512m -Dfile.encoding=UTF-8 -XX:+UseG1GC -verbose:gc -XX:+PrintGCDetails -Xloggc:/var/log/gc.log -Djava.security.egd=file:/dev/./urandom</docker.env.JAVA_OPTS>
 		<spring-native.version>0.12.1</spring-native.version>
 		<repackage.classifier/>
 	</properties>
